# FIFA-21

./: EDA.ipynb  eda_functions.py  pyproject.toml
eda_reports/: missing_data.csv  outlier_summary.csv
