[project]
name = "fifa-21"
version = "0.1.0"
description = "Automating Data Cleaning and Transformation"
authors = [
    {name = "[Maxwell Selassie]",email = "[maxwellselassie2004@gmail.com]"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=1.16,<2.2)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.5,<3.10)",
    "scipy (>=1.4.1,<1.16)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

